<resources>
    <string name="app_name">MyNotes</string>
    <string name="todo">TODO</string>
    <string name="enter_your_note_title">Enter your note title</string>
    <string name="enter_your_content">Enter your content</string>
    <string name="log_in_to_continue">Log in to Continue..</string>
    <string name="welcome_to_notebook">Welcome To Notebook !</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="new_user_want_to_sign_in">New User ! Want to Sign In ?</string>
    <string name="want_to_log_in">Want to Log In?</string>
</resources>