<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".MainActivity">

    <!-- Centerline layout -->
    <RelativeLayout
        android:id="@+id/centerline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <!-- Welcome text layout -->
    <LinearLayout
        android:id="@+id/wlcmtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="170dp"
        android:orientation="vertical">

        <!-- Welcome message -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_notebook"
            android:textColor="#212121"
            android:textSize="32sp"
            android:textStyle="bold"
            android:shadowColor="#FFFFFF"
            android:shadowDx="6"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="5dp" />

        <!-- Login instruction -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_to_continue"
            android:textColor="#212121"
            android:textSize="22sp"
            android:textStyle="bold"
            android:shadowColor="#FFFFFF"
            android:shadowDx="6"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="5dp" />
    </LinearLayout>

    <!-- Email input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="3dp"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="#FF4081"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textColor="#212121"
            android:textColorHint="#212121"
            android:textStyle="bold"
            tools:ignore="Autofill,HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Password input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="#FF4081"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:textColorHint="#212121"
            android:textColor="#212121"
            android:padding="20dp"
            tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login button -->
    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="#FF4081">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:shadowColor="#000000"
            android:shadowDx="6"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="5dp" />
    </RelativeLayout>

    <!-- Forgot password link -->
    <TextView
        android:id="@+id/gotoforgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:shadowColor="#FFFFFF"
        android:shadowDx="6"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:padding="5dp" />

    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gotoforgotpassword"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <!-- Signup button -->
    <RelativeLayout
        android:id="@+id/gotosignup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="35dp"
        android:background="#FF4081">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/new_user_want_to_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:shadowColor="#000000"
            android:shadowDx="6"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="5dp" />
    </RelativeLayout>

</RelativeLayout>
