<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".SignupPage">

    <!-- Center Line -->
    <RelativeLayout
        android:id="@+id/centerline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <!-- New User Message -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="170dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New User !!"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#212121"
            android:shadowColor="#FFFFFF"
            android:shadowDx="6"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="5dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nice to see you here...!"
            android:textColor="#212121"
            android:textSize="30sp"
            android:textStyle="bold"
            android:shadowColor="#FFFFFF"
            android:shadowDx="6"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="5dp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline2"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="#FF4081"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sigupemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#212121"
            android:textColorHint="#212121"
            tools:ignore="Autofill,HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="#FF4081"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/siguppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:textColorHint="#212121"
            android:textColor="#212121"
            android:padding="20dp"
            tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/password"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="#FF4081"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        android:shadowColor="#000000"
        android:shadowDx="6"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:padding="1dp"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gotologin"
        android:textAlignment="center"
        android:text="@string/want_to_log_in"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/signup"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:textColor="#212121"
        android:textStyle="bold"
        android:shadowColor="#FFFFFF"
        android:shadowDx="6"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:padding="5dp" />

    <TextView
        android:layout_width="29dp"
        android:layout_height="23dp"
        android:layout_above="@id/centerline2"
        android:layout_marginStart="185dp"
        android:layout_marginBottom="100dp"
        app:drawableTopCompat="@drawable/baseline_event_note_24" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
